      and scroll wheel do work.
    Useful for running unit tests of Shoes and other terminal stuff like the
    profiler text report.
    Note: raspbian may have font issues for 'monospace' font.
    https://github.com/Shoes3/shoes3/issues/236
    
  * exit should no long be used. Please use Shoes.quit
    https://github.com/Shoes3/shoes3/issues/263
  
  * plot widget (line,bar,scatter and pie charts) 
      https://github.com/Shoes3/shoes3/issues/264
      https://github.com/Shoes3/shoes3/wiki/Plot-Widget

=== Fixed with 3.3.2
  * A new launch script for OSX (cshoes) that works like Linux and Windows
    from the command line. Use Cobbler to create you osx cshoes script.
  * Windows: bug261 - fix font loading
    https://github.com/Shoes3/shoes3/issues/261
  * debugging with byebug is much better.
    https://github.com/Shoes3/shoes3/issues/263
    https://github.com/Shoes3/shoes3/wiki/Debugging-with-Byebug
  * fixed: click and release methods return the documented button. top, left 
    values. Button numbers start with left button = 1 and increases from there. 
    How many buttons and how they are numbered is not something Shoes can know 
    about so it's the user repsonsibility to be cross platform with buttons > 1.
    https://github.com/Shoes3/shoes3/issues/240

=== Developer isssues for 3.3.2
  * no improvements per se although I consider the byebug and osx cshoes major
    improvements for Shoes internals developers
----------------------------------------------------------
  
=== New with 3.3.1
  * Video widget. If you have VLC installed, Shoes will find it (and
    you can tell Shoes where your VLC is). Once found, you can use it. 
    You can not package VLC with you script however. 
    https://github.com/Shoes3/shoes3/issues/133
    Caution: may not work on OSX < 10.10
  * Secondary packaging. Use a Shoes installer script to install your app. Not 
    for the casual. Pretty damn clever and confusing so there's likely to
    be bugs and confusion.