@@ -32,13 +32,17 @@
   * exit should no long be used. Please use Shoes.quit
     https://github.com/Shoes3/shoes3/issues/263
   
-  * plot widget (line,bar,scatter and pie charts) 
+  * plot widget (line,bar,scatter, pie charts and radar/spider) 
+      https://github.com/Shoes3/shoes3/issues/288
       https://github.com/Shoes3/shoes3/issues/264
       https://github.com/Shoes3/shoes3/wiki/Plot-Widget
+      
+  * rename method 'refresh_slot' to 'refresh' before too many people 
+    use the old name.  This could break some scripts.
 
 === Fixed with 3.3.2
   * A new launch script for OSX (cshoes) that works like Linux and Windows
-    from the command line. Use Cobbler to create you osx cshoes script.
+    from the command line. Use Cobbler to create your osx cshoes script.
   * Windows: bug261 - fix font loading
     https://github.com/Shoes3/shoes3/issues/261
   * debugging with byebug is much better.
